--- a/index.html
+++ b/index.html
@@ -155,6 +155,15 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Music Player -->
+            <div id="music-player">
+                <button id="music-toggle" onclick="toggleMusic()">🎵 Play Lofi</button>
+                <audio id="bg-music" loop>
+                    <source src="https://cdn.pixabay.com/download/audio/2022/05/27/audio_1808fbf07a.mp3?filename=lofi-study-112191.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
         </div>
 
         <!-- Start Screen -->
