--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div id="chat-messages"></div>
                     <div id="chat-input-area">
                         <input type="text" id="chat-input" placeholder="Say something..." maxlength="50">
-                        <button onclick="game.networkManager.sendChat()">Send</button>
+                        <button onclick="game.network.sendChat()">Send</button>
                     </div>
                 </div>
                 <div id="inventory-ui">
